Add type signatures

--- a/TODO
+++ b/TODO
@@ -1,22 +1,19 @@
 TODO
 
+handle 207,etc in front end
 
 dit werkt nog niet goed:
-
-<script>xyz.ui('/source/*/file/content', {display: 'list', drillDown: 'source'});</script>
+   <script>xyz.ui('/source/*/file/content,id', {display: 'list', drillDown: 'source'});</script>
+   de table header wordt niet goed gegenereerd
 
 multi dimensional data
 
-
-Add type signatures
-  File::getSignature() = "string"
-  File::getSignature() = {content:"string",id:"string"{
-
+problem:
+http://localhost:8888/site/ui/view/source/aap
 
 put create new
 - check required values
 - use default values
-
 
 
 Pass more stuff by reference
@@ -60,6 +57,12 @@ ui: dynamic updating / state syncing
 proper file locks
 
 $variable usage in /ui endpoints (generate inputs to update)
+navigation in /ui endpoints
+
+
+
+
+
 
 types:
  - file  (accept, max-size)
