--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 TODO
 
-multi select weergave gaat niet goed
-http://localhost:8888/site/ui/view/source/fruit
-
+multi entity select weergave gaat niet goed
+- http://localhost:8888/site/api/source/groente,zuivel/file/id
 
 meta entity
 - property "*": {type='string|json=mixed'}  dynamic number of properties
