--- a/TODO
+++ b/TODO
@@ -1,12 +1,6 @@
 TODO
 
-add source using put
-- missing account : gaat nog iets mis
-
-add fact using post
-- POST: only for array type variables or entities with autoincrement ids
-- prevent setting of autoincremented id with patch, post or put
-
+add multiple sources to facts
 
 
 file type: viewer   https://viewerjs.org/
