Refactor ui interface

--- a/TODO
+++ b/TODO
@@ -1,18 +1,16 @@
 TODO
 
-add multiple sources to facts
-- array/set type
-{
-"type":"array",
- "element": {  <- betere naam
-   "type":"string"
- }
+array
+array,set,dictionary
 
-}
-
-
+edit/create
+- add values  POST
+- remove values DELETE
+- edit values  PATCH
 
 file type: viewer   https://viewerjs.org/
+
+
 
 
 
