--- a/TODO
+++ b/TODO
@@ -4,10 +4,12 @@ xyz.globals({options)  die worden aan alle ui.displays meegegeve
 Listeners
 - use in properties/entities
 - - implement at response.parse
-- listener types = delete/remove, modify/change, new/create, 200,404,403,500,... error
+- listener types =
+- - removed, changed, created, unchanged
+- - error, 2xx, 4xx, 5xx
+- - 200,207 ,404,403,500,... 40x removed: no longer available
 - wat geeft listener mee aan callback?
 - - status, type, property|entity, content?
-
 
 MAYBE response.map to entity/property
 
