--- a/TODO
+++ b/TODO
@@ -1,12 +1,6 @@
 TODO
 
-list:dropdown flavor
-
-
-
-
-
-php request.php : error if entity class not found
+fix rare undefined
 
 EntityClass
 - "collapse" all entityclasses,ids and properties that have active listeners into a multi GET request ?modified_after=x
@@ -43,9 +37,10 @@ provide display settings schema in json form
 - - generate auto documentation for types
 - - build ui interfaces for creating entity definitions
 
-werkt niet:  http://localhost:8888/site/api/*
-- - zou het moeten werken?
-- - iig goede foutmelding
+php request.php : error if entity class not found
+- http://localhost:8888/site/api/bestaatniet
+- werkt ook niet:  http://localhost:8888/site/api/*
+- - zou het moeten werken? iig goede foutmelding
 
 meta entity
 - property "*": {type='string|json=mixed'}  dynamic number of properties
@@ -59,12 +54,12 @@ Put @ Backend default values properties gebruiken voor niet toegevoegde props
 
 drag&drop
 - als er een reference input veld is dan worden die entities sleepbaar
+
 werkend maken: xyz.create('/$type', {});
 
 hide private storage settings or better only expose specified ones
 
 MAYBE add dot notation: /source/*/file.content,id
-
 
 create /doc endpoint for documentation
 - /doc/api
@@ -102,5 +97,3 @@ types:
 create http status code LUT
 
 maybe entity inheritance
-
-
